--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -447,7 +447,7 @@ nav {
 }
 
 .newsletter-container {
-  height: 80%;
+  height: 100%;
   width: 100%;
   margin: auto 0;
   display: -webkit-box;
@@ -470,9 +470,26 @@ nav {
   text-align: center;
 }
 
-.newsletter-container .sign-in {
+.newsletter-container .sign-in-form {
+  height: 100%;
   width: 100%;
-  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.newsletter-container .sign-in-form .form-container {
+  width: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -484,7 +501,7 @@ nav {
           align-items: center;
 }
 
-.newsletter-container .sign-in input {
+.newsletter-container .sign-in-form .form-container input {
   width: clamp(100px, 30%, 350px);
   outline: none;
   background: none;
@@ -495,38 +512,38 @@ nav {
   margin-right: 2rem;
 }
 
-.newsletter-container .sign-in input::-webkit-input-placeholder {
+.newsletter-container .sign-in-form .form-container input::-webkit-input-placeholder {
   color: #ffffffb8;
   font-size: clamp(0.7rem, 3vw, 0.9rem);
 }
 
-.newsletter-container .sign-in input:-ms-input-placeholder {
+.newsletter-container .sign-in-form .form-container input:-ms-input-placeholder {
   color: #ffffffb8;
   font-size: clamp(0.7rem, 3vw, 0.9rem);
 }
 
-.newsletter-container .sign-in input::-ms-input-placeholder {
+.newsletter-container .sign-in-form .form-container input::-ms-input-placeholder {
   color: #ffffffb8;
   font-size: clamp(0.7rem, 3vw, 0.9rem);
 }
 
-.newsletter-container .sign-in input::placeholder {
+.newsletter-container .sign-in-form .form-container input::placeholder {
   color: #ffffffb8;
   font-size: clamp(0.7rem, 3vw, 0.9rem);
 }
 
-.newsletter-container .sign-in [placeholder]::-webkit-input-placeholder {
+.newsletter-container .sign-in-form .form-container [placeholder]::-webkit-input-placeholder {
   -webkit-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
 
-.newsletter-container .sign-in [placeholder]:focus::-webkit-input-placeholder {
+.newsletter-container .sign-in-form .form-container [placeholder]:focus::-webkit-input-placeholder {
   color: transparent;
   -webkit-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
 
-.newsletter-container .sign-in button {
+.newsletter-container .sign-in-form .form-container button {
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -541,12 +558,12 @@ nav {
   font-size: clamp(0.6rem, 3vw, 0.9rem);
 }
 
-.newsletter-container .sign-in button:focus {
+.newsletter-container .sign-in-form .form-container button:focus {
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
           box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
 }
 
-.newsletter-container .sign-in button:hover {
+.newsletter-container .sign-in-form .form-container button:hover {
   -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
           box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
   -webkit-transform: translate3d(0, 1px, 0);
@@ -557,9 +574,25 @@ nav {
   transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
-.newsletter-container .sign-in button:active {
+.newsletter-container .sign-in-form .form-container button:active {
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
+}
+
+.newsletter-container .sign-in-form .error-messages {
+  margin-top: 1rem;
+}
+
+.newsletter-container .sign-in-form .error-messages p {
+  color: rgba(37, 3, 3, 0.815);
+  font-weight: 900;
+  font-size: clamp(0.7rem, 1.5vw, 1.1rem);
+}
+
+.newsletter-container .sign-in-form .error-messages h4 {
+  color: rgba(5, 116, 23, 0.801);
+  font-weight: 800;
+  font-size: clamp(0.7rem, 1.5vw, 1.1rem);
 }
 
 .footer {
